# thoth-note

./: Cargo.toml  LICENSE  README.md
src/: app.rs  commands.rs  main.rs  theme.rs  welcome.md
src/models/: note.rs
src/storage/: error.rs  fs.rs  mod.rs
src/ui/: delete_confirm.rs  editor.rs  layout.rs  mod.rs  note_list.rs  preview.rs  rename.rs
