[package]
name = "rnote"
version = "0.1.0"
authors = ["WeiNyn <nguyenhuy17798@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tui-widget-list = "0.13.2"
chrono = { version = "0.4.40", features = ["serde"] }
edtui = "0.9.6"
edtui-jagged = "0.1.12"
pulldown-cmark = "0.13.0"
