[package]
name = "thoth-note"
version = "0.1.1"
authors = ["WeiNyn <nguyenhuy17798@gmail.com>"]
license = "MIT"
edition = "2021"
readme = "README.md"
description = "A simple note-taking app written in Rust"
repository = "https://github.com/WeiNyn/thoth-note"
keywords = ["note", "note-taking", "markdown", "rust", "tui"]
categories = ["text-processing", "command-line-utilities"]
homepage = "https://docs.rs/thoth-note"

[[bin]]
name = "thoth"
path = "src/main.rs"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tui-widget-list = "0.13.2"
chrono = { version = "0.4.40", features = ["serde"] }
edtui = "0.9.6"
edtui-jagged = "0.1.12"
pulldown-cmark = "0.13.0"
catppuccin = "2.5.1"
tui-scrollview = "0.5.1"
tui-markdown = "0.3.1"
ansi-to-tui = "7.0.0"
document-features = "0.2.11"
itertools = "0.14.0"
pretty_assertions = "1.4.1"
tracing = "0.1.41"
syntect = "5.2.0"
thiserror = "2.0.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
dirs = "6.0.0"
